Always delete media galleries FilePathWatchers on the FILE thread.

This CL uses content::BrowserThread::DeleteOnFileThread to guarantee
that FilePathWatchers created by StartFilePathWatchOnMediaTaskRunner()
are always deleted on the thread from which they were created (i.e.
the FILE thread).

BUG=665511

Review-Url: https://codereview.chromium.org/2518053002
Cr-Commit-Position: refs/heads/master@{#433649}

Former-commit-id: 6f5a068ec88b1f533a4bbd040f5dd6352ff112b5