chrome/browser/media_galleries/fileapi/file_path_watcher_util.cc
@@ -33,7 +33,7 @@ void StartFilePathWatchOnFileThread(
   DCHECK_CURRENTLY_ON(content::BrowserThread::FILE);
   // The watcher is created on the FILE thread because it is very difficult
   // to safely pass an already-created file watcher to a different thread.
-  std::unique_ptr<base::FilePathWatcher> watcher(new base::FilePathWatcher);
+  MediaFilePathWatcherUniquePtr watcher(new base::FilePathWatcher);
   bool success = watcher->Watch(
       path,
       false /* recursive */,
@@ -57,16 +57,4 @@ void StartFilePathWatchOnMediaTaskRunner(
                                               path,
                                               watch_started_callback,
                                               path_changed_callback));
-}
-
-void StopFilePathWatchOnMediaTaskRunner(
-    std::unique_ptr<base::FilePathWatcher> watcher) {
-  MediaFileSystemBackend::AssertCurrentlyOnMediaSequence();
-  if (watcher) {
-    const bool task_posted = content::BrowserThread::DeleteSoon(
-        content::BrowserThread::FILE, FROM_HERE, watcher.release());
-
-    // This will fail if the FILE thread has been stopped.
-    DCHECK(task_posted);
-  }
 }
