chrome/browser/media_galleries/fileapi/file_path_watcher_util.h
@@ -10,9 +10,13 @@
 #include "base/callback_forward.h"
 #include "base/files/file_path.h"
 #include "base/files/file_path_watcher.h"
+#include "content/public/browser/browser_thread.h"
 
-typedef base::Callback<void(std::unique_ptr<base::FilePathWatcher> watcher)>
-    FileWatchStartedCallback;
+using MediaFilePathWatcherUniquePtr =
+    std::unique_ptr<base::FilePathWatcher,
+                    content::BrowserThread::DeleteOnFileThread>;
+using FileWatchStartedCallback =
+    base::Callback<void(MediaFilePathWatcherUniquePtr watcher)>;
 
 // Called on the MediaTaskRunner to begin a file watch.
 // |watch_started_callback| is responsible for taking ownership of the
@@ -21,10 +25,5 @@ void StartFilePathWatchOnMediaTaskRunner(
     const base::FilePath& path,
     const FileWatchStartedCallback& watch_started_callback,
     const base::FilePathWatcher::Callback& path_changed_callback);
-
-// Stops a file path watch started by StartFilePathWatchOnMediaTaskRunner().
-// Must be called from the MediaTaskRunner.
-void StopFilePathWatchOnMediaTaskRunner(
-    std::unique_ptr<base::FilePathWatcher> watcher);
 
 #endif  // CHROME_BROWSER_MEDIA_GALLERIES_FILEAPI_FILE_PATH_WATCHER_UTIL_H_
