chrome/browser/media_galleries/fileapi/itunes_file_util_unittest.cc
@@ -189,11 +189,6 @@ class ItunesFileUtilTest : public testing::Test {
         profile_dir_.GetPath(), content::CreateAllowFileAccessOptions());
   }
 
-  void TearDown() override {
-    MediaFileSystemBackend::MediaTaskRunner()->DeleteSoon(
-        FROM_HERE, itunes_data_provider_.release());
-  }
-
  protected:
   void TestNonexistentFolder(const std::string& path_append) {
     FileSystemOperation::FileEntryList contents;
